# pout

./: .gitignore  LICENSE.txt  README.md  pout.py  pout_test.py  pyproject.toml  setup.cfg  setup.py  test_pout.py
docs/: CUSTOMIZE.md  README_ADD.md  README_ADD_FUNCTION.md
pout/: __init__.py  __main__.py  compat.py  environ.py  interface.py  path.py  reflect.py  utils.py  value.py
pout/contrib/: ValueInterfaceColorfulRepr.py
pout_test/: __init__.py  interface_test.py  pout_test.py  reflect_test.py  utils_test.py  value_test.py
src/: pout.py  test_pout.py
tests/: __init__.py  interface_test.py  pout_test.py  reflect_test.py  utils_test.py  value_test.py
