[metadata]
name = pout
version = 0.8.12
author = Jay Marcyes
author_email = jay@marcyes.com
license = MIT
description = Prints out python variables in an easy to read way, handy for debugging
url = http://github.com/Jaymon/pout
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = find:
tests_require = testdata
#test_suite = pout_test

[options.packages.find]
exclude = tests, tests.*, *_test*, examples

[options.entry_points]
console_scripts =
    pout = pout.__main__:main
    #pout_json = pout.__main__:main_json
    #pout_char = pout.__main__:main_char
    #pout_inject = pout.__main__:main_inject
